# api

./: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  test
homepp/: __main__.py
homepp/config/: alembic.ini  settings.py
homepp/core/common/exc/: auth.py  base.py  user.py
homepp/core/common/types/: auth.py  user.py
homepp/core/user/domain/: models.py
homepp/core/user/domain/services/: auth.py  user.py
homepp/core/user/handlers/: create_user.py  current_user.py  get_user_by_hw_key.py  login.py  logout.py
homepp/core/user/protocols/: __init__.py  token_gateway.py  user_gateway.py
homepp/infrastructure/mediator/: factory.py  mediator.py
homepp/infrastructure/memory/: fake_uow.py  fake_user_gateways.py
homepp/infrastructure/redis/: factory.py  token_gateway.py
homepp/infrastructure/sqlalchemy/: env.py
homepp/infrastructure/sqlalchemy/gateways/: base.py  user.py
homepp/infrastructure/sqlalchemy/models/: base.py  controller.py  user.py
homepp/infrastructure/sqlalchemy/versions/: c23fb11f2c75_create_tables_user_controller.py
homepp/presentation/api/: main.py
homepp/presentation/api/device/: router.py
homepp/presentation/api/device/http/: get_client.py
homepp/presentation/api/device/ws/: connect.py
homepp/presentation/api/exc_handlers/: __init__.py  auth.py  user.py  utils.py
homepp/presentation/api/user/: router.py
homepp/presentation/api/user/http/: create_user.py  current.py  login.py  logout.py
migrations/: env.py
migrations/versions/: 595743198fc4_create_users_table.py
(+4 files in other folders)
