[tool.poetry]
name = "homepp-api"
version = "0.1.0"
description = ""
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"
packages = [{include = "homepp_api"}]

[tool.poetry.dependencies]
python = "3.11"
websockets = "^10.4"
fastapi = "^0.95.0"
grpcio = "^1.53.0"
grpcio-tools = "^1.53.0"
redis = "^4.5.4"
orjson = "^3.8.9"
uvicorn = "^0.21.1"
aio-pika = "^9.0.5"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-multipart = "^0.0.6"
pyjwt = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
flake8-print = "^5.0.0"
types-redis = "^4.5.4.1"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ['.git','__pycache__', '.env', 'venv', 'migrations',]
max-line-length = 79
max-complexivity = 8



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
